--- a/public/index.html
+++ b/public/index.html
@@ -70,7 +70,7 @@
 <b>2006-2010</b> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;B.S. in Biochemistry/Genetics, Texas A&amp;M University, College Station, TX </br></p>
 
 <p><h3>Publications</h3>
-L. Lopez, <b>E.S. Bellis</b>, E. Wafula, S. Hearne, L. Honaas, P. Ralph, N. Unachukwu, C.W. dePamphilis, and J.R. Lasky. (In press). Transcriptomics of host-specific interactions in natural populations of the parasitic plant <i>Striga hermonthica. Weed Science</i>.</p>
+L. Lopez, <b>E.S. Bellis</b>, E. Wafula, S. Hearne, L. Honaas, P. Ralph, N. Unachukwu, C.W. dePamphilis, and J.R. Lasky. (2019). Transcriptomics of host-specific interactions in natural populations of the parasitic plant <i>Striga hermonthica. Weed Science</i>. <b>67: </b>397-411. <a href="https://www.cambridge.org/core/journals/weed-science/article/transcriptomics-of-hostspecific-interactions-in-natural-populations-of-the-parasitic-plant-purple-witchweed-striga-hermonthica/2DA8C62CCE1034AA7EA01EE8C2727556">doi:10.1017/wsc.2019.20 </a></p>
 
 <p><b>E.S. Bellis</b>, R.B. Edlund, H.K. Berrios, H.A. Lessios, and D.R. Denver (2018). Molecular signatures of host specificity linked to habitat specialization in <i>Exaiptasia</i> sea anemones. <i> Ecology and Evolution</i>. <b>8: </b>5413-5426. <a href="https://onlinelibrary.wiley.com/doi/full/10.1002/ece3.4058">doi: 10.1002/ece3.4058 </a></p>
 
